crates/plotnik-tests/tests/02-parser/recovery_validation/def_name_lowercase.txt
lowercase = (x)
------------------ DIAGNOSTICS -------------------
error: definition names must be PascalCase
 --> query.ptk:1:1
  |
1 | lowercase = (x)
  | ^^^^^^^^^
  |
help: use `Lowercase`
  |
1 - lowercase = (x)
1 + Lowercase = (x)
  |
help: definition names become result type names
